# monorepo

./: .gitignore  README.md
apps/daily-motto/: README.md  pyproject.toml  requirements.txt
apps/daily-motto/data/: add_templates.py
apps/daily-motto/src/daily_motto/: email_utils.py  env_utils.py  models.py  scheduler_app.py
apps/daily-motto/tests/: test_db.py  test_email.py  test_generator.py  test_scheduler.py
apps/daily_motto/: pyproject.toml  pytest.ini
apps/daily_motto/data/: add_templates.py
apps/daily_motto/src/daily_motto/: models.py  scheduler_app.py
apps/daily_motto/tests/: test_db.py  test_generator.py
apps/dailymotiv/: README.md
