[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daily_motto"           # <--- package name (must match folder)
version = "0.1.0"
description = "My Daily Motto app"
authors = [
  { name = "zz", email = "you@example.com" }
]
dependencies = []        # e.g. ["requests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["daily_moto*"]